# p2p-proto

./: .gitignore  Cargo.toml  README.md  config.rs  error.rs  lib.rs  main.rs
File-conversion/: Cargo-converter.toml  README.md  cli_tool.rs  file_converter.rs  file_detector.rs  pdf_to_text.rs  test_converter.sh  text_to_pdf.rs
File-sender-implementation/: Cargo_toml.rs  README-sender.md  benchmark_tests.rs  cli_sender_tool.rs  file_sender.rs  integration_test.rs  usage_example.rs
command-line -interface/: Cargo-cli.toml  cli_sample_usage.rs  p2p_cli.rs  test_cli.sh
error handling/: config_utlities.rs  error_handling-README.md  error_handling.rs  integration_examples.rs
main-event-loop/: Cargo.toml  README.md  interactive_client.rs  lib.rs  main.rs  main_event_loop.rs  simple_reciever.rs  simple_sender.rs
p2p_stream_handler/: Cargo-p2p.toml  Config.toml  Usage.md  batch_conversion.rs  file_client.rs  file_node.rs  p2p_stream_handler.rs  simple_transfer.rs
performance-Optimizer/: Dockerfile  ci_cd_workflow.yml  deployment_scripts.sh  production_config.rs  progress_metrics_system.rs  release_config.toml
swarm implementation/: Cargo-swarm.toml  simple_swarm_implementation.rs  swarm_implementation.rs
testing/: CONTRIBUTING.md  PROJECT_SUMMARY.md  PROTOCOL.md  README.md  comphrensive_Testing.rs  create_sample_files.rs  lib_with_rustdoc.rs  security.md  usage_examples.md
