[package]
name = "p2p-file-converter"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A peer-to-peer file converter using libp2p"
license = "MIT"

[dependencies]
# libp2p dependencies with specified features
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "swarm", "identify", "ping", "mdns"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# PDF generation and extraction
genpdf = "0.2"
pdf-extract = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Additional utilities
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
